Small fixes to address comments.

--- a/src/generic_ui/polymer/root.html
+++ b/src/generic_ui/polymer/root.html
@@ -234,7 +234,7 @@
           <div id='title' flex>uProxy</div>
 
           <uproxy-bubble class='error' active='{{ ui.copyPasteError === ui_constants.CopyPasteError.LOGGED_IN }}' on-closed='{{ dismissCopyPasteError }}'>
-            <h3>{{ 'cantOpenOneTimeTitle' | $$ }}</h3>
+            <h3>{{ 'cannotOpenOneTimeTitle' | $$ }}</h3>
             <p>
               {{ 'cantOpenOneTimeMessage' | $$ }}
             </p>
