Specify character encoding (fixes Firefox UI).

--- a/src/generic_ui/index.html
+++ b/src/generic_ui/index.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+  <meta charset="UTF-8">
   <title>uProxy</title>
   <meta name='viewport' content='width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes'>
   <script src='../bower/webcomponentsjs/webcomponents.min.js'></script>
