--- a/src/generic_ui/polymer/roster.html
+++ b/src/generic_ui/polymer/roster.html
@@ -67,19 +67,19 @@
     <core-signals on-core-signal-login-success="{{ loadContacts }}"></core-signals>
 
     <!-- Shown if there are no contacts found so far -->
-    <div id='loadContacts' hidden?='{{ model.onlineNetwork.hasContacts }}'>
+    <div id='loadContacts' hidden?='{{ hasContacts }}'>
       <core-icon icon="social:person" class="no-friends"></core-icon>
       <div id='loadingContacts' hidden?='{{ !loadingContacts }}'>
         {{ 'loadingFriends' | $$ }}<br>
         <paper-progress indeterminate='true'></paper-progress>
       </div>
       <div id='noContactsFound' hidden?='{{ loadingContacts }}'>
-        {{ 'noFriendsOnline' | $$({ network: model.onlineNetwork.name }) }}
+        {{ 'noFriendsOnline' | $$ }}
         <p id='inviteFriends'>{{ 'toInviteFriends' | $$ }}</p>
       </div>
     </div>
 
-    <div hidden?='{{ !model.onlineNetwork.hasContacts }}'>
+    <div hidden?='{{ !hasContacts }}'>
       <!-- Intentionally hiding search box. May decide to readd it later. -->
       <input type='text' id='search' placeholder='Search' value='{{ searchQuery }}' hidden></input>
 
