--- a/src/generic_ui/polymer/settings.html
+++ b/src/generic_ui/polymer/settings.html
@@ -126,27 +126,23 @@
     }
     </style>
 
-    <div hidden?='{{model.onlineNetwork==null}}' vertical layout>
+    <div hidden?='{{ !model.onlineNetworks.length }}' vertical layout>
       <div class='userInfo'>
-        <div class='userImage' hidden?='{{model.onlineNetwork.imageData==null}}'
-          style='background-image: url({{model.onlineNetwork.imageData}});'
-          ></div>
-        <div class='networkName'>{{ 'connectedWith' | $$({ network: model.onlineNetwork.name }) }}</div>
-        <!-- show userName and userId if both are available -->
-        <div hidden?='{{!model.onlineNetwork.userName}}'>
-          <div class='userInfoName'>
-            <bdi>{{model.onlineNetwork.userName}}</bdi>
+        <template repeat="{{ network in model.onlineNetworks }}">
+          <div class='userImage' hidden?='{{network.imageData==null}}'
+            style='background-image: url({{network.imageData}});'
+            ></div>
+          <div class='networkName'>{{ 'connectedWith' | $$({network: network.name}) }}</div>
+          <!-- show userName and userId if both are available -->
+          <div hidden?='{{!network.userName}}'>
+            <div class='userInfoName'>{{network.userName}}</div>
+            <div class='userInfoID'>{{network.userId}}</div>
           </div>
-          <div class='userInfoID'>
-            <bdi>{{model.onlineNetwork.userId}}</bdi>
+          <!-- otherwise show only userId -->
+          <div hidden?='{{network.userName}}'>
+            <div class='userInfoIDWithoutName'>{{network.userId}}</div>
           </div>
-        </div>
-        <!-- otherwise show only userId -->
-        <div hidden?='{{model.onlineNetwork.userName}}'>
-          <div class='userInfoIDWithoutName'>
-            <bdi>{{model.onlineNetwork.userId}}</bdi>
-          </div>
-        </div>
+        </template>
       </div>
 
       <div id='settingsLinks'>
