--- a/src/generic_ui/polymer/settings.html
+++ b/src/generic_ui/polymer/settings.html
@@ -6,6 +6,8 @@
 <link rel='import' href='description.html'>
 <link rel='import' href='faq-link.html'>
 <link rel='import' href='link.html'>
+<link rel='import' href='network-in-settings.html'>
+<link rel='import' href='name-for-network.html'>
 
 <polymer-element name='uproxy-settings'>
 
@@ -23,43 +25,67 @@
       background-color: #ffffff;
       font-size: 14px;
     }
+    .clickable {
+      cursor: pointer;
+    }
     .userInfo {
       background-color: #009688;  /* dark green */
       color: white;
       padding: 28px;
       line-height: 24px;
-    }
-    .userInfoName, .userInfoIDWithoutName {
-      font-size: 16px;
-    }
-    .userInfoID {
       font-size: 14px;
-      opacity: 0.54;
+      font-weight: 400;
     }
-    .networkName {
-      padding-top: 0.5em;
+    .userInfo .subdued::first-line {
+      line-height: 24px;
+    }
+    .userInfo .subdued {
       opacity: 0.54;
+      font-size: 13px;
+      line-height: normal;
+    }
+    .currentAccountInfo {
+      margin-top: 18px;
+    }
+    #pictures {
+      height: 64px;
     }
     .userImage {
-      width: 54px;
-      height: 54px;
       border-radius: 50%;
-      margin-left: -6px;
       background-size: cover;
       background-repeat: no-repeat;
       background-position: center;
+      width: 40px;
+      height: 40px;
     }
-    #settingsLinks {
+    #pictures :nth-child(2) {
+      flex: 1;
+    }
+    #pictures :nth-child(2) .userImage {
+      width: 64px;
+      height: 64px;
+    }
+    #pictures :not(:nth-child(2)) {
+      padding-left: 3px;
+      padding-right: 3px;
+    }
+    .settingsContent {
       padding: 24px 28px;
       color: rgb(112, 112, 112);
       background-color: #fff;
     }
+    .settingsContent core-icon {
+      height: 20px;
+      width: 20px;
+      margin-right: 5px;
+    }
+
     uproxy-link,
     uproxy-faq-link {
       display: block;
       padding: 10px 0px;
     }
-    #descriptionWrapper {
+    .smalltext {
       font-size: 12px;
       padding: 0;
       color: rgb(180, 180, 180);
@@ -111,10 +137,6 @@
     #metricsCheckbox paper-checkbox, uproxy-faq-link {
       display: table-cell;
     }
-    #settingsLinks core-icon {
-      height: 20px;
-      width: 20px;
-    }
     #settingsLinks .label {
       margin: 0px 5px;
     }
@@ -124,29 +146,44 @@
       border-bottom: solid 1px;
       border-color: rgb(238, 238, 238);
     }
+
+    #accountChooser div {
+      margin-top: 30px;
+    }
     </style>
 
     <div hidden?='{{ !model.onlineNetworks.length }}' vertical layout>
       <div class='userInfo'>
-        <template repeat="{{ network in model.onlineNetworks }}">
-          <div class='userImage' hidden?='{{network.imageData==null}}'
-            style='background-image: url({{network.imageData}});'
-            ></div>
-          <div class='networkName'>{{ 'connectedWith' | $$({network: network.name}) }}</div>
-          <!-- show userName and userId if both are available -->
-          <div hidden?='{{!network.userName}}'>
-            <div class='userInfoName'>{{network.userName}}</div>
-            <div class='userInfoID'>{{network.userId}}</div>
+        <div id='pictures' horizontal layout>
+          <template repeat='{{network in model.onlineNetworks}}'>
+            <!-- this currently breaks with more than 4 logged-in networks -->
+            <div>
+              <div class='userImage' hidden?='{{network.imageData==null}}'
+                style='background-image: url({{network.imageData}});'
+                ></div>
+            </div>
+          </template>
+        </div>
+
+        <div class='clickable currentAccountInfo' on-tap='{{ toggleAccountChooser }}'>
+          <div horizontal layout>
+            <span class='subdued' flex>{{ connectedNetworks }}</span>
+            <span hidden?='{{ model.onlineNetworks.length === 1 }}'>
+              <core-icon icon='arrow-drop-down' hidden?='{{ accountChooserOpen }}'></core-icon>
+              <core-icon icon='arrow-drop-up' hidden?='{{ !accountChooserOpen }}'></core-icon>
+            </span>
           </div>
-          <!-- otherwise show only userId -->
-          <div hidden?='{{network.userName}}'>
-            <div class='userInfoIDWithoutName'>{{network.userId}}</div>
+
+          <div horizontal layout hidden?='{{ model.onlineNetworks.length !== 1 }}'>
+            <span flex><uproxy-name-for-network network='{{ model.onlineNetworks[0] }}'></uproxy-name-for-network></span>
+            <core-icon icon='arrow-drop-down' hidden?='{{ accountChooserOpen }}'></core-icon>
+            <core-icon icon='arrow-drop-up' hidden?='{{ !accountChooserOpen }}'></core-icon>
           </div>
-        </template>
+        </div>
       </div>
 
-      <div id='settingsLinks'>
-        <div id='descriptionWrapper'>
+      <div id='mainSettings' class='settingsContent' hidden?='{{ accountChooserOpen }}'>
+        <div class='smalltext'>
           {{ 'deviceDescription' | $$ }}
           <uproxy-description></uproxy-description>
         </div>
@@ -187,6 +224,15 @@
           <core-icon icon="uproxy-icons:logout"></core-icon>
           {{ 'logout' | $$ }}
         </uproxy-link>
+      </div>
+
+      <div id='accountChooser' class='settingsContent' hidden?='{{ !accountChooserOpen }}'>
+        <span class='smalltext'>Connected Accounts</span>
+        <template repeat='{{ name in model.networkNames }}'>
+          <div>
+            <uproxy-network-in-settings name='{{ name }}'></uproxy-network-in-settings>
+          </div>
+        </template>
       </div>
     </div>
 
