Switch syntax for the default device description
The syntax we were using does not work, this does it a slightly more
ugly but functional way.

--- a/src/generic_ui/polymer/description.html
+++ b/src/generic_ui/polymer/description.html
@@ -49,7 +49,7 @@
       <paper-button raised on-tap="{{ cancelEditing }}">{{ 'cancel' | $$ }}</paper-button>
     </div>
     <div id='savedDescription' hidden?='{{ editing }}' on-tap='{{ editDescription }}'>
-      {{ model.globalSettings.description || ('nameThisDevice' | $$) }}
+      {{ showDescription(model.globalSettings.description) }}
       <core-icon icon='create'></core-icon>
     </div>
   </template>
