Add translations to view-logs.html.

--- a/src/generic_ui/faq.html
+++ b/src/generic_ui/faq.html
@@ -1,5 +1,6 @@
 <html>
   <head>
+  <meta charset="UTF-8">
   <title>uProxy FAQ</title>
   <link href='fonts/Roboto.css' rel='stylesheet' type='text/css'>
   <style type='text/css'>
