--- a/src/generic_ui/view-logs.html
+++ b/src/generic_ui/view-logs.html
@@ -1,6 +1,7 @@
 <html>
 
 <head>
+  <meta charset="UTF-8">
   <title>uProxy Logs</title>
 
   <script src='../bower/webcomponentsjs/webcomponents.min.js'></script>
