Update back arrows to point right in RTL mode
This adds a global style that will identify back arrows in header bars
and make them point right when we are in RTL mode.

Fixes #1608

--- a/src/generic_ui/polymer/app-bar.html
+++ b/src/generic_ui/polymer/app-bar.html
@@ -21,6 +21,7 @@
       -moz-transition: all 0.23s !important;
       transition: all 0.23s !important;
       margin-left: 16px;
+      margin-right: 16px;
     }
     core-icon.back:hover {
       opacity: 1;
