--- a/src/generic_ui/polymer/instance.html
+++ b/src/generic_ui/polymer/instance.html
@@ -35,8 +35,8 @@
     <div id='wrapper' class='{{ instance.isOnline ? "online" : "offline" }}'
          hidden?='{{model.globalSettings.mode!=ui_constants.Mode.GET}}'>
 
-      <p id='description' hidden?='{{ !instance.description }}' dir='auto'>
-        {{ instance.description }}
+      <p id='description' hidden?='{{ !instance.description }}'>
+        <bdi>{{ instance.description }}</bdi>
       </p>
 
       <!-- It is assumed that all uproxy-instances are taken from
