--- a/copypaste-socks/polymer-components/crypto.html
+++ b/copypaste-socks/polymer-components/crypto.html
@@ -1,5 +1,4 @@
-<link rel="import" href='../bower/polymer/polymer.html'>
-
+<link rel="import" href='../../../../third_party/bower/polymer/polymer.html'>
 <polymer-element name='copypaste-crypto'>
 
   <template>
