--- a/samples/copypaste-socks-chromeapp/main.html
+++ b/samples/copypaste-socks-chromeapp/main.html
@@ -3,8 +3,9 @@
     <title>uProxy sample - copy/paste-based SOCKS proxy</title>
     <script src='freedom-for-chrome/freedom-for-chrome.js'></script>
     <script src='i18n/i18n_template.js'></script>
-    <script src='main.core-env.static.js'></script>
-    <link rel='import' href='polymer-components/vulcanized.html'>
+    <script src='glue.js'></script>
+    <script src='uproxy-lib/copypaste-socks/main.core-env.static.js'></script>
+    <link rel='import' href='uproxy-lib/copypaste-socks/polymer-components/vulcanized.html'>
     <style>
     </style>
   </head>
