cannot copy from disabled text fields in firefox

--- a/copypaste-socks/polymer-components/getter.html
+++ b/copypaste-socks/polymer-components/getter.html
@@ -24,7 +24,7 @@
       </div>
 
       <div id='step2ContainerNode' style='display: {{ model.readyForStep2 ? "block" : "none" }};'>
-        <textarea id='outboundMessageNode' disabled value='{{ model.outboundMessageValue }}'></textarea>
+        <textarea id='outboundMessageNode' readonly value='{{ model.outboundMessageValue }}'></textarea>
         <p><bdi i18n-content='copyPasteAndSend'></bdi></p>
         <p class='warning'><bdi i18n-content='warning'></bdi></p>
         <p><bdi i18n-content='pasteAndStartProxying'></bdi></p>
