a few CSS fixes for firefox

--- a/samples/copypaste-socks-firefoxapp/data/main.html
+++ b/samples/copypaste-socks-firefoxapp/data/main.html
@@ -7,6 +7,9 @@
     <script src='bower/webcomponentsjs/webcomponents.min.js'></script>
     <link rel='import' href='uproxy-lib/copypaste-socks/polymer-components/vulcanized.html'>
     <style>
+      body {
+        background-color: white;
+      }
     </style>
   </head>
   <body>
