--- a/src/generic_ui/polymer/settings.html
+++ b/src/generic_ui/polymer/settings.html
@@ -222,7 +222,7 @@
       </div>
 
       <div id='accountChooser' class='settingsContent' hidden?='{{ !accountChooserOpen }}'>
-        <span class='smalltext'>Connected Accounts</span>
+        <span class='smalltext'>{{ 'connectedAccounts' | $$ }}</span>
         <template repeat='{{ name in model.networkNames }}'>
           <div>
             <uproxy-network-in-settings name='{{ name }}'></uproxy-network-in-settings>
