formatting and renaming to try to make this easier to follow

--- a/samples/simple-freedom-chat/main.html
+++ b/samples/simple-freedom-chat/main.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-  <title>PeerConnection chat client</title>
+  <title>WebRTC-powered chat client (single page version)</title>
   <script src='freedom/freedom.js'></script>
 </head>
 
