Fix RTL CSS for advanced settings and feedback

--- a/src/generic_ui/polymer/advanced-settings.html
+++ b/src/generic_ui/polymer/advanced-settings.html
@@ -10,7 +10,7 @@
   <template>
     <style>
     :host {
-      text-align: center;
+      text-align: start;
       font-color: #009688;  /* dark green */
     }
     uproxy-app-bar {
@@ -26,7 +26,7 @@
     }
     #formContainer {
       padding: 30px;
-      text-align: left;
+      text-align: start;
       color: #009688;
       overflow: auto;
     }
