--- a/src/generic_ui/polymer/feedback.html
+++ b/src/generic_ui/polymer/feedback.html
@@ -29,7 +29,7 @@
     }
     #formContainer {
       padding: 30px;
-      text-align: left;
+      text-align: start;
       color: #009688;
       overflow: auto;
     }
@@ -45,9 +45,10 @@
     }
     #logCheckboxLabel {
       cursor: pointer;
+      text-indent: 10px;
+      display: inline-block;
     }
     #logCheckbox {
-      padding-right:10px;
       vertical-align: middle;
     }
     #moreInfo {
