Reduce complexity of copy+paste messages
This aims to reduce the complexity of the copy+paste messages as well as
to reduce the computation necessary to process them.

First of all, this creates a new type for the COPYPASTE_MESSAGE message
data, CopyPasteMessage.  It was previously being treated as a
PeerMessage (type was actually {type :PeerMessageType, data :string}),
and with the other updates, the type is now
{type :PeerMessageType, data :PeerMessage[]}.  This removes the need for
us to do manual type casting.

Second, as alluded to above, we now send the peer messages to the UI as
an array of peer messages instead of doing the encoding within the core.
This, and storing them in this fashion within the UI, allows us the
convenience of only needing to pipe the messages through a filter in
order to get the correct output and reduces a bit of complexity there.

Finally, since we are sending the messages down as the array, we no
longer need to handle decoding them back into an object before we add
new messages.

--- a/src/generic_ui/polymer/copypaste.html
+++ b/src/generic_ui/polymer/copypaste.html
@@ -73,10 +73,10 @@
           {{ 'copyConnectionLink' | $$ }}
         </p>
 
-        <textarea readonly hidden?='{{ !ui.copyPasteGettingMessage.length }}'
-          class='message' on-tap='{{ select }}'>https://www.uproxy.org/request/{{ ui.copyPasteGettingMessage }}</textarea>
+        <textarea readonly hidden?='{{ !ui.copyPasteGettingMessages.length }}'
+          class='message' on-tap='{{ select }}'>https://www.uproxy.org/request/{{ ui.copyPasteGettingMessages | encodeMessage }}</textarea>
 
-        <span class='message-loading' hidden?='{{ ui.copyPasteGettingMessage.length }}'>{{ 'loading' | $$ }}</span>
+        <span class='message-loading' hidden?='{{ ui.copyPasteGettingMessages.length }}'>{{ 'loading' | $$ }}</span>
 
         <p>
           {{ 'friendNeedsToClick' | $$ }}
@@ -122,10 +122,10 @@
           {{ 'howToOfferOneTime' | $$ }}
         </p>
 
-        <textarea readonly hidden?='{{ !ui.copyPasteSharingMessage.length }}'
-          class='message' on-tap='{{ select }}'>https://www.uproxy.org/offer/{{ ui.copyPasteSharingMessage }}</textarea>
+        <textarea readonly hidden?='{{ !ui.copyPasteSharingMessages.length }}'
+          class='message' on-tap='{{ select }}'>https://www.uproxy.org/offer/{{ ui.copyPasteSharingMessages | encodeMessage }}</textarea>
 
-        <span class='message-loading' hidden?='{{ ui.copyPasteSharingMessage.length }}'>{{ 'loading' | $$ }}Loading...</span>
+        <span class='message-loading' hidden?='{{ ui.copyPasteSharingMessages.length }}'>{{ 'loading' | $$ }}Loading...</span>
 
         <div>
           <a href='#' on-tap='{{ switchToGetting }}'>{{ 'getOneTimeInstead' | $$ }}</a>
