--- a/src/generic_ui/polymer/contact.html
+++ b/src/generic_ui/polymer/contact.html
@@ -32,18 +32,19 @@
     }
     .nameRow core-icon {
       opacity: 0.6;
-      margin: 0px 18px 0px 0px;
+      margin: 0px;
     }
     .nameRow core-icon.expand {
       min-width: 25px;
     }
     .nameRow .iconWrapper {
       min-width: 30px;
-      margin-left: 5px;
+      text-align: end;
+      margin: 0px 8px;
     }
     .nameRow .iconWrapper core-icon[icon=open-in-new] {
-      width: 17px;
-      height: 17px;
+      width: 16px;
+      height: 16px;
     }
     .nameRow:hover core-icon.expand {
       opacity: 1;
@@ -90,7 +91,7 @@
       height: 16px;
       width: 16px;
       color: rgba(0,0,0,0.54);
-      margin: 0px 2px;
+      margin: 0px 4px 0px 0px;
     }
     core-icon[icon=check] {
       color: #009688;
@@ -103,6 +104,7 @@
     p.preButtonText {
       margin: 0;
       font-size: 14px;
+      line-height: 20px;
     }
     </style>
 
