--- a/src/generic_ui/polymer/root.html
+++ b/src/generic_ui/polymer/root.html
@@ -43,6 +43,8 @@
       }
       paper-tab {
         cursor: pointer;
+        font-weight: 400;
+        letter-spacing: 0.25px;
       }
       paper-tab::shadow #ink {
         color: #20F1DE;
@@ -87,12 +89,12 @@
         color: #FFFFFF;
       }
       core-toolbar::shadow #topBar {
-        padding: 0px;
+        padding: 0px 16px;
         height: 60px;
       }
       core-toolbar core-icon[icon="menu"] {
-        margin: 0px 16px;
         opacity: 0.6;
+        margin: 0px;
         -webkit-transition: all 0.23s !important;
         -moz-transition: all 0.23s !important;
         transition: all 0.23s !important;
@@ -104,13 +106,13 @@
       core-toolbar #title {
         font-size: 20px;
         margin: 0px 36px;
+        letter-spacing: 0.25px;
       }
       core-toolbar core-icon.status {
         cursor: pointer;
         color: #006A5A;
-      }
-      core-toolbar #sharingEnabledIcon {
-        margin: 0px 15px;
+        height: 20px;
+        width: 20px;
       }
       #settings {
         top: 0;
