--- a/src/generic_ui/polymer/splash.html
+++ b/src/generic_ui/polymer/splash.html
@@ -51,6 +51,9 @@
       z-index: 10;
       overflow: auto;
     }
+    .view > p {
+      line-height: 20px;
+    }
     .view[hidden] {
       display: block !important;
       opacity: 0;
@@ -60,7 +63,7 @@
       width: 150px;
     }
     uproxy-network {
-      padding: 1em;
+      padding: 12px;
     }
     #nextWrapper {
       margin-top: 50px;
