--- a/src/generic_ui/polymer/root.html
+++ b/src/generic_ui/polymer/root.html
@@ -374,6 +374,7 @@
         </p>
       </div>
       <paper-button class='dialogButton' on-tap='{{ revertProxySettings }}'>{{ 'continueBrowsing' | $$ }}</paper-button>
+      <paper-button class='dialogButton' on-tap='{{ restartProxying }}'>{{ 'restartProxying' | $$ }}</paper-button>
     </uproxy-action-dialog>
 
     <uproxy-troubleshoot titleText='{{ troubleshootTitle }}'></uproxy-troubleshoot>
