--- a/src/generic_ui/polymer/roster.html
+++ b/src/generic_ui/polymer/roster.html
@@ -2,6 +2,8 @@
 <link rel='import' href='../../bower/paper-progress/paper-progress.html'>
 <link rel="import" href="../../bower/core-signals/core-signals.html">
 <link rel="import" href="../../bower/core-icons/social-icons.html">
+<link rel="import" href="../../bower/core-icons/core-icons.html">
+<link rel="import" href="../../bower/paper-fab/paper-fab.html">
 <link rel='import' href='roster-group.html'>
 
 <polymer-element name='uproxy-roster' attributes='contacts, mode'>
@@ -65,6 +67,8 @@
 
     <!-- Listen for the 'login-success' event from root.ts; once logged in, show the loading contacts animation. -->
     <core-signals on-core-signal-login-success="{{ loadContacts }}"></core-signals>
+
+    <paper-fab mini icon="add" style="color: white; position:absolute; bottom:10; right:10;" on-tap="{{ inviteUser }}"></paper-fab>
 
     <!-- Shown if there are no contacts found so far -->
     <div id='loadContacts' hidden?='{{ hasContacts }}'>
