Changes for design and code review r2

--- a/src/generic_ui/faq.html
+++ b/src/generic_ui/faq.html
@@ -129,7 +129,7 @@
 
           <section class="faq" id="whatIsPortControl">
             <h2>What does "port control" mean?</h2>
-            <p>If your router has port control enabled (UPnP, NAT-PMP, or PCP), uProxy can talk to your router to specifically allow incoming connections from other uProxy users. If just one side of a uProxy connection has port control, sharing/getting internet access will almost always be successful. (However, successful connections can be made without port control.) To learn how to enable port control on your router, check your router manual or Google "your router name" + "enable UPnP".</p>
+            <p>If your router has port control enabled (UPnP, NAT-PMP, or PCP), uProxy can talk to your router to specifically allow incoming connections from other uProxy users. If either side of a uProxy connection has port control, sharing/getting internet access will almost always be successful. (However, successful connections can be made without port control.) To learn how to enable port control on your router, check your router manual or Google "your router name" + "enable UPnP".</p>
 
             <a class='top' href="faq.html#">Back to top</a>
           </section>
