--- a/src/generic_ui/polymer/advanced-settings.html
+++ b/src/generic_ui/polymer/advanced-settings.html
@@ -25,7 +25,7 @@
       height: 100%;
     }
     #formContainer {
-      padding: 30px;
+      padding: 20px 30px 0px;
       text-align: start;
       color: #009688;
       overflow: auto;
@@ -66,10 +66,10 @@
       font-size: 1.4em;
     }
     #advancedSettingsDecorator {
-      height: 350px;
+      height: 340px;
     }
     #advancedSettingsPaperTextarea {
-      height: 350px;
+      height: 340px;
       margin: 0em;
     }
     paper-autogrow-textarea::shadow .textarea-container {
@@ -88,6 +88,13 @@
     .error {
       color: rgb(200, 112, 112);
     }
+    #portControlBox {
+      border-bottom: 1px solid rgb(221, 221, 221);
+      padding: 20px 30px;
+      text-align: start;
+      color: #009688;
+      overflow: auto;
+    }
     #portControlBox core-icon[icon='help'],
     #portControlBox core-icon[icon='refresh'] {
       height: 15px;
@@ -105,7 +112,7 @@
     }
     #portControlBox span, #portControlBox uproxy-link,
     #portControlBox uproxy-faq-link {
-      display: table-cell;
+      display: inline;
     }
     #portControlBox span {
       color: rgb(112, 112, 112);
@@ -120,6 +127,26 @@
         <uproxy-app-bar on-go-back='{{ close }}'>
           {{ 'advancedSettings_sentenceCase' | $$ }}
         </uproxy-app-bar>
+        <div id='portControlBox'>
+          <p class='inputLabel'>
+            {{ 'portControlTitle' | $$ }}
+            <uproxy-faq-link anchor='whatIsPortControl'>
+              <core-icon icon='help'></core-icon>
+            </uproxy-link>
+          </p>
+          <span class='label' hidden?='{{ ui.portControlSupport !== uproxy_core_api.PortControlSupport.TRUE }}'>
+            {{ 'portControlSupported' | $$ }}
+          </span>
+          <span class='label' hidden?='{{ ui.portControlSupport !== uproxy_core_api.PortControlSupport.FALSE }}'>
+            {{ 'portControlNotSupported' | $$ }}
+          </span>
+          <span class='label' hidden?='{{ ui.portControlSupport !== uproxy_core_api.PortControlSupport.PENDING }}'>
+            {{ 'portControlPending' | $$ }}
+          </span>
+          <uproxy-link on-tap='{{ refreshPortControl }}' role='button'>
+            <core-icon icon='refresh'></core-icon>
+          </uproxy-link>
+        </div>
         <div id='formContainer' flex>
           <p class='inputLabel'>{{ 'editAdvancedSettings' | $$ }}</p>
           <paper-input-decorator id='advancedSettingsDecorator' label='{{ "editAdvancedSettingsPlaceholder" | $$ }}'>
@@ -138,21 +165,6 @@
           <p id='failedKeyValueSetAdvancedSettings' class='advancedSettingsText error' hidden?='{{ status !== StatusState.KEY_VALUE_ERROR }}'>
             {{ 'settingsJsonError' | $$ }}
           </p>
-
-          <div id='portControlBox'>
-            <span class='label' hidden?='{{ !ui.portControlSupport }}'>
-              {{ 'portControlSupported' | $$ }}
-            </span>
-            <span class='label' hidden?='{{ ui.portControlSupport }}'>
-              {{ 'portControlNotSupported' | $$ }}
-            </span>
-            <uproxy-link on-tap='{{ refreshPortControl }}' role='button'>
-              <core-icon icon='refresh'></core-icon>
-            </uproxy-link>
-            <uproxy-faq-link anchor='whatIsPortControl'>
-              <core-icon icon='help'></core-icon>
-            </uproxy-link>
-          </div>
         </div> <!-- end of form container -->
         <div id='setAdvancedSettings' on-tap='{{ setAdvancedSettings }}'>
           {{ 'set' | $$ }}
